Updated API endpoint version
- Created script.
